--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,14 +16,65 @@
     <ion-label>
       <div> 
         <h3>Bulbasaur</h3>  
-        <ion-badge color="success">Grass</ion-badge>  
-        <ion-badge color="tertiary">Poison</ion-badge>  
+        <ion-badge color="grass">Grass</ion-badge>  
+        <ion-badge color="poison">Poison</ion-badge>  
       </div>
     </ion-label>
 
-    <ion-chip color="success">
+    <ion-chip color="grass">
       <ion-label>001</ion-label>
     </ion-chip>
   </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png">
+    </ion-thumbnail>
+
+    <ion-label>
+      <div> 
+        <h3>Charmander</h3>  
+        <ion-badge color="fire">Fire</ion-badge>  
+      </div>
+    </ion-label>
+
+    <ion-chip color="fire">
+      <ion-label>004</ion-label>
+    </ion-chip>
+  </ion-item>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png">
+      </ion-thumbnail>
+  
+      <ion-label>
+        <div> 
+          <h3>Squirtle</h3>  
+          <ion-badge color="water">Water</ion-badge>  
+        </div>
+      </ion-label>
+  
+      <ion-chip color="water">
+        <ion-label>007</ion-label>
+      </ion-chip>
+    </ion-item>
+
+      <ion-item>
+        <ion-thumbnail slot="start">
+          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/025.png">
+        </ion-thumbnail>
+    
+        <ion-label>
+          <div> 
+            <h3>Pikachu</h3>  
+            <ion-badge color="eletric">Eletric</ion-badge>  
+          </div>
+        </ion-label>
+    
+        <ion-chip color="eletric">
+          <ion-label>025</ion-label>
+        </ion-chip>
+      </ion-item>
 
 </ion-content>
