--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,73 +8,22 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-item>
+  <ion-item *ngFor="let pokemon of listaPokemon"> 
     <ion-thumbnail slot="start">
-      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/001.png">
+      <img [src]="urlImg + pokemon.foto">
     </ion-thumbnail>
 
     <ion-label>
       <div> 
-        <h3>Bulbasaur</h3>  
-        <ion-badge color="grass">Grass</ion-badge>  
-        <ion-badge color="poison">Poison</ion-badge>  
+        <h3>{{pokemon.nome | titlecase}}</h3>  
+        <ion-badge *ngFor="let tipo of pokemon.tipos" [color]="tipo">{{tipo | uppercase}}</ion-badge>  
+
       </div>
     </ion-label>
 
-    <ion-chip color="grass">
-      <ion-label>001</ion-label>
+    <ion-chip [color]="pokemon.tipos">
+      <ion-label>{{pokemon.numero}}</ion-label>
     </ion-chip>
   </ion-item>
-
-  <ion-item>
-    <ion-thumbnail slot="start">
-      <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/004.png">
-    </ion-thumbnail>
-
-    <ion-label>
-      <div> 
-        <h3>Charmander</h3>  
-        <ion-badge color="fire">Fire</ion-badge>  
-      </div>
-    </ion-label>
-
-    <ion-chip color="fire">
-      <ion-label>004</ion-label>
-    </ion-chip>
-  </ion-item>
-
-    <ion-item>
-      <ion-thumbnail slot="start">
-        <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png">
-      </ion-thumbnail>
-  
-      <ion-label>
-        <div> 
-          <h3>Squirtle</h3>  
-          <ion-badge color="water">Water</ion-badge>  
-        </div>
-      </ion-label>
-  
-      <ion-chip color="water">
-        <ion-label>007</ion-label>
-      </ion-chip>
-    </ion-item>
-
-      <ion-item>
-        <ion-thumbnail slot="start">
-          <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/025.png">
-        </ion-thumbnail>
-    
-        <ion-label>
-          <div> 
-            <h3>Pikachu</h3>  
-            <ion-badge color="eletric">Eletric</ion-badge>  
-          </div>
-        </ion-label>
-    
-        <ion-chip color="eletric">
-          <ion-label>025</ion-label>
-        </ion-chip>
-      </ion-item>
 
 </ion-content>
