pokemon list changing pages

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,22 +8,39 @@
 
 <ion-content [fullscreen]="true">
 
-  <ion-item *ngFor="let pokemon of listaPokemon"> 
+  <ion-item *ngFor="let pokemon of listaPokemon">
     <ion-thumbnail slot="start">
-      <img [src]="urlImg + pokemon.foto">
+      <img [src]="urlImg + pokemon.id.toString().padStart(3,'0') + '.png'">
     </ion-thumbnail>
 
     <ion-label>
-      <div> 
-        <h3>{{pokemon.nome | titlecase}}</h3>  
-        <ion-badge *ngFor="let tipo of pokemon.tipos" [color]="tipo">{{tipo | uppercase}}</ion-badge>  
-
+      <div>
+        <h3>{{ pokemon.name | titlecase }}</h3>
+        <ion-badge *ngFor="let tipo of pokemon.type" [color]="tipo['type']['name']"> {{tipo['type']['name'] | uppercase}} </ion-badge>
       </div>
     </ion-label>
 
-    <ion-chip [color]="pokemon.tipos">
-      <ion-label>{{pokemon.numero}}</ion-label>
+    <ion-chip [color]="pokemon['types'][0]['type']['name']" slot="end">
+      <ion-label>{{pokemon.id.toString().padStart(3, '0')}}</ion-label>
     </ion-chip>
   </ion-item>
 
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="buscarPokemon(previous)">
+        <ion-icon slot="icon-only" name="caret-back-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title class="ion-text-center">{{count}}</ion-title>
+    
+    <ion-buttons slot="end">
+      <ion-button (click)="buscarPokemon(next)">>
+        <ion-icon slot="icon-only" name="return-up-forward-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
