--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
     <ion-label>
       <div>
         <h3>{{ pokemon.name | titlecase }}</h3>
-        <ion-badge *ngFor="let tipo of pokemon.type" [color]="tipo['type']['name']"> {{tipo['type']['name'] | uppercase}} </ion-badge>
+        <ion-badge *ngFor="let tipo of pokemon.types" [color]="tipo['type']['name']"> {{tipo['type']['name'] | uppercase}} </ion-badge>
       </div>
     </ion-label>
 
@@ -29,16 +29,14 @@
 
 <ion-footer>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons slot="start" *ngIf="previous">
       <ion-button (click)="buscarPokemon(previous)">
         <ion-icon slot="icon-only" name="caret-back-circle-outline"></ion-icon>
       </ion-button>
-    </ion-buttons>
-
-    <ion-title class="ion-text-center">{{count}}</ion-title>
-    
-    <ion-buttons slot="end">
-      <ion-button (click)="buscarPokemon(next)">>
+    </ion-buttons>   
+    <ion-title class="ion-text-center">{{totalPaginas(count)}}</ion-title>    
+    <ion-buttons slot="end" *ngIf="next">
+      <ion-button (click)="buscarPokemon(next)">
         <ion-icon slot="icon-only" name="return-up-forward-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
