--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -123,6 +123,83 @@
   --ion-color-electric-contrast-rgb: 255, 255, 255;
   --ion-color-electric-shade: #d1bb2f;
   --ion-color-electric-tint: #f0d949;
+
+  --ion-color-bug: #729f3f;
+	--ion-color-bug-rgb: 114,159,63;
+	--ion-color-bug-contrast: #000000;
+	--ion-color-bug-contrast-rgb: 0,0,0;
+	--ion-color-bug-shade: #648c37;
+	--ion-color-bug-tint: #80a952;
+
+  --ion-color-steel: #9eb7b8;
+	--ion-color-steel-rgb: 158,183,184;
+	--ion-color-steel-contrast: #000000;
+	--ion-color-steel-contrast-rgb: 0,0,0;
+	--ion-color-steel-shade: #8ba1a2;
+	--ion-color-steel-tint: #a8bebf;
+
+  --ion-color-rock: #a38c21;
+	--ion-color-rock-rgb: 163,140,33;
+	--ion-color-rock-contrast: #000000;
+	--ion-color-rock-contrast-rgb: 0,0,0;
+	--ion-color-rock-shade: #8f7b1d;
+	--ion-color-rock-tint: #ac9837;
+
+  --ion-color-fighting: #d56723;
+	--ion-color-fighting-rgb: 213,103,35;
+	--ion-color-fighting-contrast: #000000;
+	--ion-color-fighting-contrast-rgb: 0,0,0;
+	--ion-color-fighting-shade: #bb5b1f;
+	--ion-color-fighting-tint: #d97639;
+
+  --ion-color-ground: linear-gradient(180deg, #f7de3f  50%, #ab9842 50%);
+	--ion-color-ground-rgb: 247,222,63;
+	--ion-color-ground-contrast: #000000;
+	--ion-color-ground-contrast-rgb: 0,0,0;
+	--ion-color-ground-shade: #d9c337;
+	--ion-color-ground-tint: #f8e152;
+
+  --ion-color-ghost: #7b62a3;
+	--ion-color-ghost-rgb: 123,98,163;
+	--ion-color-ghost-contrast: #ffffff;
+	--ion-color-ghost-contrast-rgb: 255,255,255;
+	--ion-color-ghost-shade: #6c568f;
+	--ion-color-ghost-tint: #8872ac;
+
+  --ion-color-normal: #a4acaf;
+	--ion-color-normal-rgb: 164,172,175;
+	--ion-color-normal-contrast: #000000;
+	--ion-color-normal-contrast-rgb: 0,0,0;
+	--ion-color-normal-shade: #90979a;
+	--ion-color-normal-tint: #adb4b7;
+
+  --ion-color-fairy: #fdb9e9;
+	--ion-color-fairy-rgb: 253,185,233;
+	--ion-color-fairy-contrast: #000000;
+	--ion-color-fairy-contrast-rgb: 0,0,0;
+	--ion-color-fairy-shade: #dfa3cd;
+	--ion-color-fairy-tint: #fdc0eb;
+
+  --ion-color-psychic: #f366b9;
+	--ion-color-psychic-rgb: 243,102,185;
+	--ion-color-psychic-contrast: #000000;
+	--ion-color-psychic-contrast-rgb: 0,0,0;
+	--ion-color-psychic-shade: #d65aa3;
+	--ion-color-psychic-tint: #f475c0;
+
+  --ion-color-ice: #51c4e7;
+	--ion-color-ice-rgb: 81,196,231;
+	--ion-color-ice-contrast: #000000;
+	--ion-color-ice-contrast-rgb: 0,0,0;
+	--ion-color-ice-shade: #47accb;
+	--ion-color-ice-tint: #62cae9;
+
+  --ion-color-dark: #707070;
+	--ion-color-dark-rgb: 112,112,112;
+	--ion-color-dark-contrast: #ffffff;
+	--ion-color-dark-contrast-rgb: 255,255,255;
+	--ion-color-dark-shade: #636363;
+	--ion-color-dark-tint: #7e7e7e;
 }
 
 .ion-color-grass {
@@ -186,4 +263,103 @@
   --ion-color-contrast-rgb: var(--ion-color-electric-contrast-rgb);
   --ion-color-shade: var(--ion-color-electric-shade);
   --ion-color-tint: var(--ion-color-electric-tint);
+}
+
+.ion-color-bug {
+	--ion-color-base: var(--ion-color-bug);
+	--ion-color-base-rgb: var(--ion-color-bug-rgb);
+	--ion-color-contrast: var(--ion-color-bug-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-bug-contrast-rgb);
+	--ion-color-shade: var(--ion-color-bug-shade);
+	--ion-color-tint: var(--ion-color-bug-tint);
+}
+
+.ion-color-steel {
+	--ion-color-base: var(--ion-color-steel);
+	--ion-color-base-rgb: var(--ion-color-steel-rgb);
+	--ion-color-contrast: var(--ion-color-steel-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-steel-contrast-rgb);
+	--ion-color-shade: var(--ion-color-steel-shade);
+	--ion-color-tint: var(--ion-color-steel-tint);
+}
+
+.ion-color-rock {
+	--ion-color-base: var(--ion-color-rock);
+	--ion-color-base-rgb: var(--ion-color-rock-rgb);
+	--ion-color-contrast: var(--ion-color-rock-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-rock-contrast-rgb);
+	--ion-color-shade: var(--ion-color-rock-shade);
+	--ion-color-tint: var(--ion-color-rock-tint);
+}
+
+.ion-color-fighting {
+	--ion-color-base: var(--ion-color-fighting);
+	--ion-color-base-rgb: var(--ion-color-fighting-rgb);
+	--ion-color-contrast: var(--ion-color-fighting-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-fighting-contrast-rgb);
+	--ion-color-shade: var(--ion-color-fighting-shade);
+	--ion-color-tint: var(--ion-color-fighting-tint);
+}
+
+.ion-color-ground {
+	--ion-color-base: var(--ion-color-ground);
+	--ion-color-base-rgb: var(--ion-color-ground-rgb);
+	--ion-color-contrast: var(--ion-color-ground-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-ground-contrast-rgb);
+	--ion-color-shade: var(--ion-color-ground-shade);
+	--ion-color-tint: var(--ion-color-ground-tint);
+}
+
+.ion-color-ghost {
+	--ion-color-base: var(--ion-color-ghost);
+	--ion-color-base-rgb: var(--ion-color-ghost-rgb);
+	--ion-color-contrast: var(--ion-color-ghost-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-ghost-contrast-rgb);
+	--ion-color-shade: var(--ion-color-ghost-shade);
+	--ion-color-tint: var(--ion-color-ghost-tint);
+}
+
+.ion-color-normal {
+	--ion-color-base: var(--ion-color-normal);
+	--ion-color-base-rgb: var(--ion-color-normal-rgb);
+	--ion-color-contrast: var(--ion-color-normal-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-normal-contrast-rgb);
+	--ion-color-shade: var(--ion-color-normal-shade);
+	--ion-color-tint: var(--ion-color-normal-tint);
+}
+
+.ion-color-fairy {
+	--ion-color-base: var(--ion-color-fairy);
+	--ion-color-base-rgb: var(--ion-color-fairy-rgb);
+	--ion-color-contrast: var(--ion-color-fairy-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-fairy-contrast-rgb);
+	--ion-color-shade: var(--ion-color-fairy-shade);
+	--ion-color-tint: var(--ion-color-fairy-tint);
+}
+
+.ion-color-psychic {
+	--ion-color-base: var(--ion-color-psychic);
+	--ion-color-base-rgb: var(--ion-color-psychic-rgb);
+	--ion-color-contrast: var(--ion-color-psychic-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-psychic-contrast-rgb);
+	--ion-color-shade: var(--ion-color-psychic-shade);
+	--ion-color-tint: var(--ion-color-psychic-tint);
+}
+
+.ion-color-ice {
+	--ion-color-base: var(--ion-color-ice);
+	--ion-color-base-rgb: var(--ion-color-ice-rgb);
+	--ion-color-contrast: var(--ion-color-ice-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-ice-contrast-rgb);
+	--ion-color-shade: var(--ion-color-ice-shade);
+	--ion-color-tint: var(--ion-color-ice-tint);
+}
+
+.ion-color-dark {
+	--ion-color-base: var(--ion-color-dark);
+	--ion-color-base-rgb: var(--ion-color-dark-rgb);
+	--ion-color-contrast: var(--ion-color-dark-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-dark-contrast-rgb);
+	--ion-color-shade: var(--ion-color-dark-shade);
+	--ion-color-tint: var(--ion-color-dark-tint);
 }
